src/objects/inscor__Manufacturer_Code__c.object
<CustomObject>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__CAGE_Code__c</fullName>
        <label>CAGE Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>inscor__Country__c</referenceTo>
        <relationshipLabel>Manufacturer Codes</relationshipLabel>
        <relationshipName>Manufacturer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Country_of_Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Origin</label>
        <referenceTo>inscor__Country__c</referenceTo>
        <relationshipLabel>Manufacturer Codes (Country of Origin)</relationshipLabel>
        <relationshipName>Manufacturer_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Retrieve_Government_Awards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retrieve Government Awards?</description>
        <label>Retrieve Government Awards?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Retrieve_Government_Solicitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrieve Government Solicitations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status_Code__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Street_1__c</fullName>
        <label>Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Street_2__c</fullName>
        <label>Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Type_Code__c</fullName>
        <label>Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Manufacturer Code</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manufacturer Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturer Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>